--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,38 +5,39 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.products{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.product {
+  border: 1px solid lightgray;
+  padding: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.icon {
+  width: 30px;
+  height: 30px;
+  margin: 5px;
 }
 
-.card {
-  padding: 2em;
+.icon:hover {
+  cursor: pointer;
+  opacity: 70%;
 }
 
-.read-the-docs {
-  color: #888;
+.icon:active {
+  transform: scale(95%);
+}
+
+.dark-mode {
+  background-color: black;
+  color: white;
+  min-height: 100vh;
+}
+
+.light-mode {
+  background-color: white;
+  color: black;
+  min-height: 100vh;
 }
